--- a/software-capstone-fe/public/index.html
+++ b/software-capstone-fe/public/index.html
@@ -27,17 +27,89 @@
     <title>React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <div id="root">
+      <style>
+        body {
+          background-color: #f1f2f4;
+        }
+        .spin-ctn {
+          position: absolute;
+          background-color: rgb(0 0 0 / 10%);
+          top: 0;
+          left: 0;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: column;
+          width: 100%;
+          height: 100%;
+          z-index: 1000;
+          color: #1890ff;
+          font-size: 14px;
+          font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+            Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
+            'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
+            'Noto Color Emoji';
+        }
+        .ant-spin-dot {
+          position: relative;
+          display: inline-block;
+          font-size: 32px;
+          width: 1em;
+          height: 1em;
+        }
+        .ant-spin-dot-spin {
+          transform: rotate(45deg);
+          animation: antRotate 1.2s infinite linear;
+        }
+        .ant-spin-dot i {
+          width: 14px;
+          height: 14px;
+          border-radius: 100%;
+          background-color: #1890ff;
+          transform: scale(0.75);
+          display: block;
+          position: absolute;
+          opacity: 0.3;
+          animation: antSpinMove 1s infinite linear alternate;
+          transform-origin: 50% 50%;
+        }
+        .ant-spin-dot i:nth-child(1) {
+          left: 0;
+          top: 0;
+        }
+        .ant-spin-dot i:nth-child(2) {
+          right: 0;
+          top: 0;
+          animation-delay: 0.4s;
+        }
+        .ant-spin-dot i:nth-child(3) {
+          right: 0;
+          bottom: 0;
+          animation-delay: 0.8s;
+        }
+        .ant-spin-dot i:nth-child(4) {
+          left: 0;
+          bottom: 0;
+          animation-delay: 1.2s;
+        }
+        @keyframes antSpinMove {
+          to {
+            opacity: 1;
+          }
+        }
+        @keyframes antRotate {
+          to {
+            transform: rotate(405deg);
+          }
+        }
+      </style>
+      <div class="spin-ctn">
+        <span class="ant-spin-dot ant-spin-dot-spin">
+          <i></i><i></i><i></i><i></i>
+        </span>
+        Loading Keycloak...
+      </div>
+    </div>
   </body>
 </html>
