--- a/software-capstone-fe/public/index.html
+++ b/software-capstone-fe/public/index.html
@@ -30,7 +30,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alata&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>IELTS Warrior</title>
   </head>
   <body>
     <div id="root">
